--- a/home/.atom/styles.less
+++ b/home/.atom/styles.less
@@ -41,3 +41,9 @@ atom-text-editor {
   // background: green;
   background: #1eb273;
 }
+
+
+.tab-bar .tab .close-icon {
+  left: 10px;
+  right: initial;
+}
